# Hw13_1_2_part

hw10_dj/site_author/: db.sqlite3
hw10_dj/site_author/site_author/: settings.py
hw10_dj/site_author/users/: urls.py  views.py
hw10_dj/site_author/users/templates/users/: login.html  password_reset_email.html
hw13_hw/: main.py  pyproject.toml
hw13_hw/postgres-data/base/16384/: pg_internal.init
hw13_hw/postgres-data/base/5/: pg_internal.init
hw13_hw/postgres-data/global/: pg_control  pg_internal.init
hw13_hw/postgres-data/pg_stat/: pgstat.stat
hw13_hw/src/: schemas.py
hw13_hw/src/conf/: config.py
hw13_hw/src/database/: models.py
hw13_hw/src/repository/: contacts.py  users.py
hw13_hw/src/routes/: auth.py  contacts.py  users.py
hw13_hw/src/services/: auth.py  email.py
